fix: realign the logo and footer text

--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -6,4 +6,9 @@ footer {
     position: fixed;
     text-align: center;
     bottom: 0;
+    line-height: 1.5;
+}
+
+footer p {
+    padding: 8px 0;
 }
