--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -6,6 +6,7 @@ header {
 }
 
 .header-logo {
-    position: absolute;
+    position: relative;
     left: 20px;
+    top: 10%;
 }
